[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UI/BasicButton1.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://src/UI/MenuBg.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/themes/title_theme.tres" type="Theme" id=6]
[ext_resource path="res://src/UI/themes/main_theme.tres" type="Theme" id=7]


[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 360.0
margin_top = 50.0
margin_right = 664.0
margin_bottom = 550.0
rect_min_size = Vector2( 200, 500 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 154.0
margin_right = 304.0
margin_bottom = 251.0
theme = ExtResource( 6 )
text = "LolliBird"
align = 1
valign = 1

[node name="CreateGame" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_left = 77.0
margin_top = 271.0
margin_right = 227.0
margin_bottom = 298.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 7 )
text = "Create Game"

[node name="JoinGame" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_left = 77.0
margin_top = 318.0
margin_right = 227.0
margin_bottom = 345.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 7 )
text = "Join Game"

[node name="MenuBg" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="VBoxContainer/CreateGame" to="." method="_on_CreateGame_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinGame" to="." method="_on_JoinGame_pressed"]
